speedtest/middleware-sablier.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier

spec:
  plugin:
    sablier:
      group: speedtest
      dynamic:
        displayName: Speedtest
        refreshFrequency: 5s
        showDetails: "true"
        theme: ghost
      sablierUrl: http://sablier.sablier.svc.cluster.local
      sessionDuration: 1m
