speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  labels:
    sablier.enable: "true"
    sablier.group: speedtest

spec:
  # replicas: 1 # autoscale by sablier
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      enableServiceLinks: false
      containers:
        - name: speedtest
          image: openspeedtest/latest:latest@sha256:0d2d94087a68cf3f6e2a99b9bcc03c49a8624f144cb670f841bfa3c1570a0eb6
          ports:
            - name: http
              containerPort: 3000
