speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest

spec:
  type: ClusterIP
  selector:
    app: speedtest
  ports:
    - name: http
      port: 80
      targetPort: http
