speedtest/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest

spec:
  entryPoints:
    - websecure
  tls:
    secretName: speedtest-tls
  routes:
    - kind: Rule
      match: Host(`speedtest.toki317.dev`)
      middlewares:
        - name: auth-toki317-dev-admin
          namespace: auth
      services:
        - namespace: speedtest
          kind: Service
          name: speedtest
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
